# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2017-09-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix release script to always succeed with stop (for openrc-run)
    * Improve configure script rebar check
    * Fix monkey_latency time_gaussian bug that would almost never occur
      (the Box-Mullter transformation X1 would need to be 0.0)
    * Update quickrand

2017-08-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix automake build of Erlang source code for parallel use

2017-08-10 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Finished improving the automake build of Java source code
    * Fix the install step of the Haskell integration tests

2017-08-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Reduce the release script functionality to the core necessary and
      add default values for all erl and epmd environment variables
    * Fix Java CloudI API compilation for parallel make

2017-08-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change the runtime current working directory to the log directory

2017-08-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change log_time_offset log output to seconds with nanoseconds precision

2017-08-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Service configuration option request_timeout_adjustment was modified to
      use Erlang monotonic time so timeout adjustments are not impacted by any
      OS time changes
    * Javascript CloudI API now properly handles the request_timeout_adjustment
      service configuration option for service request responses
    * cloudi_service_http_client, cloudi_service_http_cowboy,
      cloudi_service_http_elli now use Erlang monotonic time when reporting
      the time a request takes in the log output

2017-08-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Handle erlang:deprecated_time_unit() in Erlang/OTP 20
      for future compatibility
    * Update uuid